--- a/ex4/part2.html
+++ b/ex4/part2.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let inputNumber = parseInt(prompt('Input your number!'))
+    let factorial = 1
+    for (let i = 1; i <= inputNumber; i++) {
+        factorial = factorial * i
+    }
+    document.write(factorial)
+</script>
 </body>
 </html>
